--- a/final_project/app/views/greetings/index.html.erb
+++ b/final_project/app/views/greetings/index.html.erb
@@ -1,24 +1,124 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <title>Shipr</title>
-    <%= stylesheet_link_tag    "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-  </head>
-  <body>
-    <%= link_to "Home", root_path %> |
-    <% if user_signed_in? %>
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %>
-    <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <hr/>
+<head>
+  <meta charset="utf-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0;'>
+    <title >Shipr</title>
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
+    <link rel='stylesheet' href='styles/reset.css'>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel='stylesheet' href='styles/main.css'>
+</head>
+<body class="debug"> 
 
-    <%= yield %>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
-  </body>
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="../assets/mi1.jpg" alt="...">
+    </div>
+    <div class="item">
+      <img src="../assets/s1.jpg" alt="...">
+    </div>
+    <div class="item">
+      <img src="../assets/hp1.jpg" alt="...">
+    </div>
+  </div>
+
+</div> <!-- Carousel -->
+
+<header class="white_line">
+    <div class="row titlerow">
+      <h1 class="titlerow__title">
+        Shipr
+      </h1>
+      <nav class="nav">
+        <a href="#" class="nav__link nav__bold">All Archives</a>
+        <a href="#" class="nav__link">TV</a>
+        <a href="#" class="nav__link">Movies</a>
+        <a href="#" class="nav__link">Books</a>
+        <a href="#" class="nav__link">Bands</a>
+      </nav>
+  </header>
+
+
+  <section class="row moreinfo">
+    <section class="columns">
+      <section class="bottom__moreinfo">
+        <header>
+          <h3>Search The Archives</h3>
+        </header>
+        <p>Choose your fandom and tell us where you are!</p>
+
+        <div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+    Pick Your Fandom
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sherlock</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">One Direction</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Shadowhunters</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#"Harry Potter</a></li>
+  </ul>
+</div><br>
+
+<div class="dropdown2">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true">
+    Where Are You?
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Series 1</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Series 2</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Series 3</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">All Series</a></li>
+  </ul>
+</div>
+
+      </section>
+      <section class="bottom__moreinfo2">
+        <header>
+          <h3>Sign Up</h3>
+        </header>
+        <p>Create an account to help us archive new content.</p>
+<form class="form-inline">
+  <div class="form-group">
+    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
+  </div><br>
+  <div class="form-group">
+    <label class="sr-only" for="exampleInputPassword3">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
+  </div><br>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Remember me
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Sign in</button>
+</form>
+
+        <a class="moreinfo__action" href="#">Sign Up Now</a>
+      </section>
+    </section>
+  </section><!-- row moreinfo -->
+  <footer class="row footer">
+    &copy; 2015 Shipr Beta. Made in NY.
+  </footer><!-- row footer -->
+<script src='javascript/main.js'></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+</body>
 </html>
-
