--- a/final_project/app/views/entries/new.html.erb
+++ b/final_project/app/views/entries/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a entry here:</h1>
+<h1>Add a new entry here:</h1>
 <%= form_for @entry do |f| %>
   <%= label_tag :category %>
   <%= text_field_tag :category %>
